Second Updated Welchs T Test Lab

--- a/index.ipynb
+++ b/index.ipynb
@@ -39,36 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
+    "import numpy as np #importing numpy library\n",
     "np.random.seed(82)\n",
-    "control = np.random.normal(loc=10, scale=1, size=8)\n",
-    "treatment = np.random.normal(loc=10.5, scale=1.2, size=12)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([10.8406504 ,  8.64285284, 11.28693651, 10.57347539, 10.57945015,\n",
-       "        9.97237817,  9.61844717,  9.69121804])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "control"
+    "control = np.random.normal(loc = 10, scale = 1, size = 8)\n",
+    "treatment = np.random.normal(loc = 10.5, scale = 1.2, size = 12)"
    ]
   },
   {
@@ -79,9 +57,8 @@
     {
      "data": {
       "text/plain": [
-       "array([12.16530726, 12.5597993 , 11.76525366,  9.82399228, 11.03539891,\n",
-       "       12.8992533 , 10.78680718, 11.71126641, 10.2343344 ,  9.77839837,\n",
-       "        9.72938618, 10.39959928])"
+       "array([10.8406504 ,  8.64285284, 11.28693651, 10.57347539, 10.57945015,\n",
+       "        9.97237817,  9.61844717,  9.69121804])"
       ]
      },
      "execution_count": 3,
@@ -90,7 +67,7 @@
     }
    ],
    "source": [
-    "treatment"
+    "control"
    ]
   },
   {
@@ -101,7 +78,9 @@
     {
      "data": {
       "text/plain": [
-       "2.0997990691576858"
+       "array([12.16530726, 12.5597993 , 11.76525366,  9.82399228, 11.03539891,\n",
+       "       12.8992533 , 10.78680718, 11.71126641, 10.2343344 ,  9.77839837,\n",
+       "        9.72938618, 10.39959928])"
       ]
      },
      "execution_count": 4,
@@ -110,21 +89,34 @@
     }
    ],
    "source": [
-    "def welch_t(a, b):\n",
-    "    \n",
-    "    \"\"\" Calculate Welch's t-statistic for two samples. \"\"\"\n",
-    "\n",
+    "treatment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0997990691576858"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def welch_t(a, b): #Defining function\n",
+    "    \"\"\" Calculate Welch's t-statistic for two samples.\"\"\"\n",
     "    numerator = a.mean() - b.mean()\n",
-    "    \n",
-    "    # “ddof = Delta Degrees of Freedom”: the divisor used in the calculation is N - ddof, \n",
-    "    #  where N represents the number of elements. By default ddof is zero.\n",
-    "    \n",
-    "    denominator = np.sqrt(a.var(ddof=1)/a.size + b.var(ddof=1)/b.size)\n",
-    "    \n",
-    "    return np.abs(numerator/denominator)\n",
-    "\n",
-    "welch_t(control, treatment)\n",
-    "# 2.0997990691576858"
+    "    #\"ddof = Delta Degrees of Freedom\": the divisor used in the calculation is N - ddof\n",
+    "    #where N represents the number of elements. By default ddof is zero.\n",
+    "    denominator = np.sqrt(a.var(ddof = 1)/a.size + b.var(ddof = 1)/b.size)\n",
+    "    return np.abs(numerator / denominator)\n",
+    "welch_t(control, treatment)"
    ]
   },
   {
@@ -151,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -160,28 +152,22 @@
        "17.673079085111"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def welch_df(a, b):\n",
-    "    \n",
-    "    \"\"\" Calculate the effective degrees of freedom for two samples. \"\"\"\n",
-    "    \n",
-    "    s1 = a.var(ddof=1) \n",
-    "    s2 = b.var(ddof=1)\n",
+    "    \"\"\" Calculate teh effective degrees of freedom for two samples.\"\"\"\n",
+    "    s1 = a.var(ddof = 1)\n",
+    "    s2 = b.var(ddof = 1)\n",
     "    n1 = a.size\n",
     "    n2 = b.size\n",
-    "    \n",
     "    numerator = (s1/n1 + s2/n2)**2\n",
-    "    denominator = (s1/ n1)**2/(n1 - 1) + (s2/ n2)**2/(n2 - 1)\n",
-    "    \n",
+    "    denominator = (s1/n1)**2/(n1 - 1) + (s2/n2)**2/(n2 - 1)\n",
     "    return numerator/denominator\n",
-    "\n",
-    "welch_df(control, treatment)\n",
-    "# 17.673079085111"
+    "welch_df(control, treatment)"
    ]
   },
   {
@@ -193,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -205,11 +191,10 @@
     }
    ],
    "source": [
-    "# Your code here; calculate t-score and the degrees of freedom for the two samples, a and b\n",
+    "#Calculate t-score and the degrees of freedom for the two samples, a and b\n",
     "t = welch_t(control, treatment)\n",
     "df = welch_df(control, treatment)\n",
-    "print(t,df)\n",
-    "# 2.0997990691576858 17.673079085111"
+    "print(t, df)"
    ]
   },
   {
@@ -225,7 +210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.stats as stats #importing stats library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +231,6 @@
     }
    ],
    "source": [
-    "import scipy.stats as stats\n",
     "p = 1 - stats.t.cdf(t, df)\n",
     "print(p)"
    ]
@@ -258,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -290,19 +283,18 @@
        "0.025191666225846454"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p_value(treatment, control)\n",
-    "# 0.025191666225846454"
+    "p_value(treatment, control)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -311,14 +303,13 @@
        "0.05038333245169291"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p_value(treatment, control, two_sided=True)\n",
-    "# 0.05038333245169291"
+    "p_value(treatment, control, two_sided=True)"
    ]
   },
   {
